# openapi.yaml
@@ -3,6 +3,11 @@ openapi: 3.0.3
 info:
   title: Demo Server
   version: 0.1.0
+  description: Demo server for Golang REST API
+  contact:
+    name: rusher
+    url: https://github.com/rusher2004/go-rest-api
+    email: robertinthecloud@icloud.com
 
 servers:
   - url: http://localhost:8080
@@ -17,6 +22,7 @@ paths:
       - $ref: "#/components/parameters/processor"
     get:
       operationId: getUserList
+      description: Get list of users
       responses:
         "200":
           content:
@@ -31,6 +37,7 @@ paths:
 
     post:
       operationId: postUser
+      description: Create a new user
       requestBody:
         content:
           application/json:
@@ -67,6 +74,7 @@ paths:
           format: uuid
     delete:
       operationId: deleteUserByID
+      description: Delete user by ID
       responses:
         "204":
           description: "User succussfully deleted"
@@ -74,6 +82,7 @@ paths:
         - User
     get:
       operationId: getUserByID
+      description: Get user by ID
       responses:
         "200":
           content:
@@ -85,6 +94,7 @@ paths:
         - User
     put:
       operationId: putUserByID
+      description: Update user by ID
       requestBody:
         content:
           application/json:
@@ -106,6 +116,7 @@ components:
     processor:
       in: query
       name: proc
+      required: true
       schema:
         type: string
         description: Processor name
